test/errors/compare_bool.sl
# expect: COMPERROR
bool r = true < false;
